# stereo_template_pose

./: CMakeLists.txt  LICENSE  README.md  manifest.xml  package.xml
include/: image_properties.h  opencv_utils.h  template_pose.h  template_pose_base.h
src/: image_properties.cpp  template_pose.cpp  template_pose_base.cpp  template_pose_node.cpp
